I FIXED THE OVERFLOWING PIC THING!!!!

--- a/styles.css
+++ b/styles.css
@@ -226,6 +226,7 @@ li {
   max-width: 960px;
 }
 
+
 .project-small {
   display: inline-block;
   min-width: 240px;
@@ -258,7 +259,6 @@ li {
 .post-item {
   display: inline-block;
   min-height: 100%;
-
   margin: 0 auto;
 }
 
@@ -267,6 +267,7 @@ li {
   padding-left: 4% 0;
   padding-bottom: 4%;
   font-size: 1.5em;
+
 }
 
 .project-text {
@@ -291,11 +292,14 @@ li {
 .project-pic {
   width: 40%;
   max-width: inherit;
-  overflow: hidden;
   float: left;
   padding: 4% 4%;
-
 }
+
+.post-img {
+	max-width: inherit;
+}
+
 
 /******Styles for the case study page******/
 
